--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Rascal Micro</title>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="description" content="Real good little computers" />
+<link rel="stylesheet/less" href="../style.less" type="text/css" />
+<script src="/less-1.0.35.min.js"></script>
+<meta name="description" content="Real good little computers" />
 </head>
 <body>
     <div id="header">
@@ -38,7 +39,7 @@
                 <p>The Rascal is like the Arduino or other single-board computers, but it's designed to live on the web. The Rascal is powerful enough to handle real web traffic, but you don't have to be a professional electrical engineer to use one.</p>
                 <h2>Open source</h2>
                 <p>The Rascal is built from the ground up with open source technologies. The hardware, designed by Rascal Micro, is available to you for free under a Creative Commons license. The software consists of the Linux kernel, the GNU tools, and a host of higher level languages and tools, all available under various free licenses.</p>
-                <a href="/img/the-first-rascal-2010-07-14.jpg"><img src="/img/950px-the-first-rascal-2010-07-14.jpg" width="950px" alt="Not the Rascal"></a>
+                <a href="/img/950px-rascal-0.2.jpg"><img src="/img/950px-rascal-0.2.jpg" width="950px" alt="Not the Rascal"></a>
                 <h2>Can I steal the design?</h2>
                 <p>I'm giving you the design, so no, technically you can't steal it. If you want to make your own version of the Rascal, or use it in a commercial product, go ahead. Seriously, do it. I'll never saturate the market for devices like the Rascal, and I'm already working on the next design anyway.
             </div>
@@ -53,6 +54,22 @@
                 CC-BY-SA <a href="http://rascalmicro.com">Rascal Micro</a> LLC
             <div>
         </div>
+        <script type="text/javascript"> 
+ 
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-96134-3']);
+          _gaq.push(['_trackPageview']);
+ 
+          (function() {
+            var ga = document.createElement('script'); ga.type =
+        'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
+        'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+          })();
+ 
+        </script>
     </div>
 </body>
 </html>
