--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <meta name="description" content="Real good little computers" />
     <title>Rascal Micro</title>
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-<link rel="stylesheet/less" href="../style.less" type="text/css" />
-<script src="/less-1.0.35.min.js"></script>
-<meta name="description" content="Real good little computers" />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
+    <link rel="stylesheet/less" href="../style.less" type="text/css" />
+    <script src="/less-1.0.35.min.js"></script>
 </head>
 <body>
     <div id="header">
@@ -33,16 +33,19 @@
                 <p>The Rascal is a small computer that you can use to monitor and control the world remotely. It's like the brains of an iPhone, without the corporate overlord.</p>
                 <h2>Why the Rascal?</h2>
                 <p>Maybe you played with legos or erector sets as a kid. Maybe you just got into hacking electronics recently. Either way, you're one of the pioneers of a new era. Instead of saying, "They should make one of those that connects to the internet," you do it yourself.</p>
+                <h2>Open source</h2>
+                <p>The Rascal is built from the ground up with open source technologies. The hardware, designed by Rascal Micro, is available to you for free under a Creative Commons license. The software consists of the Linux kernel, the GNU tools, and a host of higher level languages and tools, all available under various free licenses.</p>
+                <img src="/img/rascal-summary-diagram.png" width="950px" alt="How the Rascal works">
+                <h2>Can I steal the design?</h2>
+                <p>I'm giving you the design, so no, technically you can't steal it. If you want to make your own version of the Rascal, or use it in a commercial product, go ahead. Seriously, do it. I'll never saturate the market for devices like the Rascal, and I'm already working on the next design anyway.
             </div>
             <div id="righttorso">
                 <h2>Internet native</h2>
                 <p>The Rascal is like the Arduino or other single-board computers, but it's designed to live on the web. The Rascal is powerful enough to handle real web traffic, but you don't have to be a professional electrical engineer to use one.</p>
-                <h2>Open source</h2>
-                <p>The Rascal is built from the ground up with open source technologies. The hardware, designed by Rascal Micro, is available to you for free under a Creative Commons license. The software consists of the Linux kernel, the GNU tools, and a host of higher level languages and tools, all available under various free licenses.</p>
-                <a href="/img/950px-rascal-0.2.jpg"><img src="/img/950px-rascal-0.2.jpg" width="950px" alt="Not the Rascal"></a>
-                <h2>Can I steal the design?</h2>
-                <p>I'm giving you the design, so no, technically you can't steal it. If you want to make your own version of the Rascal, or use it in a commercial product, go ahead. Seriously, do it. I'll never saturate the market for devices like the Rascal, and I'm already working on the next design anyway.
+                <h2>Is the Rascal just an expensive Ethernet shield?</h2>
+                <p>No. An Ethernet shield is great for a small project where you need an Arduino to report a few data points over a network. For more advanced projects, a better architecture is use something like an Arduino to take care of the high-speed, real-time tasks, like controlling motors or reading sensors, while the Rascal logs data and provides a user interface.</p>
             </div>
+	        <div style="clear: both"> </div>
         </div>
     </div>
     <div id="footer">
@@ -51,8 +54,8 @@
                 <p>"He who receives an idea from me, receives instruction himself without lessening mine;<br>as he who lights his taper at mine, receives light without darkening me."<br>&ndash;Tom Jefferson</p>
             </div>
             <div id="bottombar">
-                CC-BY-SA <a href="http://rascalmicro.com">Rascal Micro</a> LLC
-            <div>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a><br />This site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+            </div>
         </div>
         <script type="text/javascript"> 
  
