Back on the git bandwagon

--- a/index.htm
+++ b/index.htm
@@ -33,9 +33,9 @@
                 <p>The Rascal is a small computer that you can use to monitor and control the world remotely. It's like the brains of an iPhone, without the corporate overlord.</p>
                 <h2>Why the Rascal?</h2>
                 <p>Maybe you played with legos or erector sets as a kid. Maybe you just got into hacking electronics recently. Either way, you're one of the pioneers of a new era. Instead of saying, "They should make one of those that connects to the internet," you do it yourself.</p>
+                <img src="/img/rascal-summary-diagram.png" width="950px" alt="How the Rascal works">
                 <h2>Open source</h2>
                 <p>The Rascal is built from the ground up with open source technologies. The hardware, designed by Rascal Micro, is available to you for free under a Creative Commons license. The software consists of the Linux kernel, the GNU tools, and a host of higher level languages and tools, all available under various free licenses.</p>
-                <img src="/img/rascal-summary-diagram.png" width="950px" alt="How the Rascal works">
                 <h2>Can I steal the design?</h2>
                 <p>I'm giving you the design, so no, technically you can't steal it. If you want to make your own version of the Rascal, or use it in a commercial product, go ahead. Seriously, do it. I'll never saturate the market for devices like the Rascal, and I'm already working on the next design anyway.
             </div>
@@ -43,7 +43,7 @@
                 <h2>Internet native</h2>
                 <p>The Rascal is like the Arduino or other single-board computers, but it's designed to live on the web. The Rascal is powerful enough to handle real web traffic, but you don't have to be a professional electrical engineer to use one.</p>
                 <h2>Is the Rascal just an expensive Ethernet shield?</h2>
-                <p>No. An Ethernet shield is great for a small project where you need an Arduino to report a few data points over a network. For more advanced projects, a better architecture is use something like an Arduino to take care of the high-speed, real-time tasks, like controlling motors or reading sensors, while the Rascal logs data and provides a user interface.</p>
+                <p>No. An Ethernet shield is great for a small project where you need an Arduino to report a few data points over a network. For more advanced projects, a better architecture is to use something like an Arduino to take care of the high-speed, real-time tasks, like controlling motors or reading sensors, while the Rascal logs data and provides a user interface.</p>
             </div>
 	        <div style="clear: both"> </div>
         </div>
