Reorganized front page, added mailchimp form

--- a/index.htm
+++ b/index.htm
@@ -28,20 +28,50 @@
     </div>
     <div id="torso">
         <div class="rascalcontent">
-            <div id="lefttorso">
+            <div id="upperlefttorso">
                 <h2>What is the Rascal and why do I need one?</h2>
-                <p>The Rascal is a small computer that you can use to monitor and control the world remotely. It's like the brains of an iPhone, without the corporate overlord.</p>
+                <p>The Rascal is a small computer that you can use to monitor and control the world remotely. It's like the brains of an iPhone, without the corporate overlord. The Rascal is powerful enough to handle real web traffic, but you don't have to be a professional electrical engineer to use one.</p>
                 <h2>Why the Rascal?</h2>
                 <p>Maybe you played with legos or erector sets as a kid. Maybe you just got into hacking electronics recently. Either way, you're one of the pioneers of a new era. Instead of saying, "They should make one of those that connects to the internet," you do it yourself.</p>
-                <img src="/img/rascal-summary-diagram.png" width="950px" alt="How the Rascal works">
-                <h2>Open source</h2>
-                <p>The Rascal is built from the ground up with open source technologies. The hardware, designed by Rascal Micro, is available to you for free under a Creative Commons license. The software consists of the Linux kernel, the GNU tools, and a host of higher level languages and tools, all available under various free licenses.</p>
-                <h2>Can I steal the design?</h2>
-                <p>I'm giving you the design, so no, technically you can't steal it. If you want to make your own version of the Rascal, or use it in a commercial product, go ahead. Seriously, do it. I'll never saturate the market for devices like the Rascal, and I'm already working on the next design anyway.
             </div>
-            <div id="righttorso">
-                <h2>Internet native</h2>
-                <p>The Rascal is like the Arduino or other single-board computers, but it's designed to live on the web. The Rascal is powerful enough to handle real web traffic, but you don't have to be a professional electrical engineer to use one.</p>
+            <div id="upperrighttorso">
+                <h2>How can I buy a Rascal?</h2>
+                <p>The Rascal is still under development, so you can't buy one yet. If you're interested in hearing the details as the Rascal is developed, stick your email address in the box below and click the button. So far, this means emails about once every 5 weeks.</p>
+                <!-- Begin MailChimp Signup Form -->
+                <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+                <script type="text/javascript" src="http://downloads.mailchimp.com/js/jquery.validate.js"></script>
+                <script type="text/javascript" src="http://downloads.mailchimp.com/js/jquery.form.js"></script>
+                <script type="text/javascript">
+                // delete this script tag and use a "div.mce_inline_error{ XXX !important}" selector
+                // or fill this in and it will be inlined when errors are generated
+                var mc_custom_error_style = '';
+                </script>
+                <div id="mc_embed_signup">
+                    <form action="http://rascalmicro.us1.list-manage.com/subscribe/post?u=1b1bbc0cef4aee1d788f8423d&amp;id=f8f38179b4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                        <div class="mc-field-group">
+                            <label for="mce-EMAIL">Email:</label>
+                            <input type="text" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+	                        <div class="response" id="mce-error-response" style="display:none"></div>
+	                        <div class="response" id="mce-success-response" style="display:none"></div>
+                            <input type="submit" value="Take me to the future!" name="subscribe" id="mc-embedded-subscribe" class="btn">
+                        </div>
+                    </form>
+                </div>
+                <script type="text/javascript" src="http://rascalmicro.com/mailchimp-signup.js"></script>
+                <!--End mc_embed_signup-->
+                <p>Your email address won't be sold, given, rented, leased, licensed, lent, assigned, repurposed, aliased, commandeered, reverse-borrowed, klaxoned, plaxoed, broadcast via guerrilla radio, read through a megaphone in Davis Square, or otherwise trumpeted skywards. You can always unsubscribe.
+                </p>
+            </div>
+            <div class="twocolumnimage">
+                <img src="/img/rascal-summary-diagram.png" width="950px" alt="How the Rascal works">
+            </div>
+            <div id="lowerlefttorso">
+                <h2>Open source</h2>
+                <p>The Rascal is built from the ground up with open source technologies. The hardware design, created by Rascal Micro, is available to you for free under a Creative Commons license. The software consists of the Linux kernel, the GNU tools, and a host of higher level languages and tools, all available under various free licenses.</p>
+                <h2>Can I steal the design?</h2>
+                <p>I'm giving you the design, so no, technically you can't steal it. If you want to make your own version of the Rascal under a different name, or use it in a commercial product, go ahead. Seriously, do it. I'll never saturate the market for devices like the Rascal, and I'm already working on the next design anyway.
+            </div>
+            <div id="lowerrighttorso">
                 <h2>Is the Rascal just an expensive Ethernet shield?</h2>
                 <p>No. An Ethernet shield is great for a small project where you need an Arduino to report a few data points over a network. For more advanced projects, a better architecture is to use something like an Arduino to take care of the high-speed, real-time tasks, like controlling motors or reading sensors, while the Rascal logs data and provides a user interface.</p>
             </div>
