Update meta info in headers

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Real good little computers" />
+    <meta name="description" content="Small computers for art and science" />
     <title>Rascal Micro</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet/less" href="../style.less" type="text/css" />
