--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Small computers for art and science" />
     <title>Rascal Micro</title>
+    <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet/less" href="../style.less" type="text/css" />
     <script src="/less-1.0.35.min.js"></script>
