--- a/index.htm
+++ b/index.htm
@@ -83,11 +83,21 @@
     <div id="footer">
         <div class="rascalcontent">
             <div id="bottomcontent">
-                <p>"He who receives an idea from me, receives instruction himself without lessening mine;<br>as he who lights his taper at mine, receives light without darkening me."<br>&ndash;Tom Jefferson</p>
-            </div>
-            <div id="bottombar"> 
-            <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a><br />This site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> except where otherwise noted.</p>
-            <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a></p>
+                <div id="bottombar">
+                    <div id="footerleft">
+                        <a href="/blog/feed/index.xml"><img alt="RSS icon" src="/img/rss-icon-32px.png"></a>
+                        <a href="/blog/feed/atom/index.xml"><img alt="Atom icon" src="/img/atom-icon-32px.png"></a><br />
+                        <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a>
+                    </div>
+                    <div id="footercenter">
+                        <p>"He who receives an idea from me, receives instruction himself without lessening mine; as he who lights his taper at mine, receives light without darkening me." &ndash; Tom Jefferson</p>
+                        <p>This site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> except where otherwise noted.</p>
+                        <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a></p>
+                    </div>
+                    <div id="footerright">
+                        <img alt="Open Source Hardware logo" src="/img/oshw-logo-light.svg" width="190px" />
+                    </div>
+                </div>
             </div>
         </div>
         <script type="text/javascript"> 
