Add links to legal stuff in all the right places

--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@
                     <div id="footercenter">
                         <p>"He who receives an idea from me, receives instruction himself without lessening mine; as he who lights his taper at mine, receives light without darkening me." &ndash; Tom Jefferson</p>
                         <p>This site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> except where otherwise noted.</p>
-                        <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a></p>
+                        <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a> | <a href="http://rascalmicro.com/docs/terms-of-use.html">Terms of use</a></p>
                     </div>
                     <div id="footerright">
                         <img alt="Open Source Hardware logo" src="/img/oshw-logo-light.svg" width="190px" />
