--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
             <div id="topbar">
                 <img src="/img/rascallogo.png" id="rascallogo" alt="Rascal Micro logo">
                 <ul id="nav">
-                  <li><a href="store">Store</a></li>
+                  <li><a href="http://store.rascalmicro.com">Store</a></li>
                   <li><a href="blog">Blog</a></li>
                   <li><a href="forum">Forum</a></li>
                   <li><a href="docs">Docs</a></li>
