Tutorial expansions, update front page

--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,9 @@
             </div>
             <div id="upperrighttorso">
                 <h2>How can I buy a Rascal?</h2>
-                <p>The Rascal is still under development, so you can't buy one yet. If you're interested in hearing the details as the Rascal is developed, stick your email address in the box below and click the button. So far, this means emails about once every 5 weeks.</p>
+                <p>After around 6 months of hardware testing and software development, the first Rascals were put up for sale to the general public in November, 2011. You can buy one in <a href="http://store.rascalmicro.com">the store</a>.</p>
+                <h2>Mailing list</h2>    
+                <p>If you're interested in hearing the details as the Rascal is developed, stick your email address in the box below and click the button. So far, this means emails about once every 5 weeks.</p>
                 <!-- Begin MailChimp Signup Form -->
                 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
                 <script type="text/javascript" src="http://downloads.mailchimp.com/js/jquery.validate.js"></script>
