Improve serial comm tutorial, fix up related Pytronics docs, and dress up some tables with CSS

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet/less" href="../style.less" type="text/css" />
-    <script src="/less-1.0.35.min.js"></script>
+    <script src="/js/less-1.0.35.min.js"></script>
 </head>
 <body>
     <div id="header">
@@ -61,7 +61,7 @@
                         </div>
                     </form>
                 </div>
-                <script type="text/javascript" src="http://rascalmicro.com/mailchimp-signup.js"></script>
+                <script type="text/javascript" src="http://rascalmicro.com/js/mailchimp-signup.js"></script>
                 <!--End mc_embed_signup-->
                 <p>Your email address won't be sold, given, rented, leased, licensed, lent, assigned, repurposed, aliased, commandeered, reverse-borrowed, klaxoned, plaxoed, broadcast via guerrilla radio, read through a megaphone in Davis Square, or otherwise trumpeted skywards. You can always unsubscribe.
                 </p>
