Shrink header and fix OSHW logo

--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,7 @@
                         <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a> | <a href="http://rascalmicro.com/docs/terms-of-use.html">Terms of use</a></p>
                     </div>
                     <div id="footerright">
-                        <img alt="Open Source Hardware logo" src="/img/oshw-logo-light.svg" width="190px" />
+                        <a href="http://rascalmicro.com/docs/sources.html"><img alt="Open Source Hardware logo" src="/img/oshw-logo-rascal-colors.png"/></a>
                     </div>
                 </div>
             </div>
